# AHLS

./: .gitignore  a.o.4.bc  a.o.4.ll  ahls.py  approx.py  config.sh  llvm-opt.txt  out.txt  requirements.txt  s.txt  test.txt
benchmarks/: benchmarks.json
core/: llvm_utils.py  passes.py
dataset_analysis/: inspect_solutions.py  plot_data_metrics.py
design_eval/: ahls_error.py
design_metrics/: resource_savings.py
dfg/: hls_dfg.py
directives/: adpcm.json  aes.json  gemm.json  knn.json  transposed_fft.json
estimators/: __init__.py  dataset.py  estimator.py  gnn.py  graph.py  hls_data.py  hlsdata.py  layers.py  loss.py  losses.py  lut_estimator.py  models.py  optimizers.py  random_forest.py  rf_regressor.py  train.py  train_model.py
exceptions/: ahls_exceptions.py
gnn/: __init__.py  analysis.py  batch.py  collate.py  dataloader.py  dataset.py  evaluate.py  layers.py  losses.py  models.py  optimizers.py  train.py  utils.py
heuristics/: grasp.py  heuristic.py  random_search.py
hls/: call_vitis.sh  create_tcl.py  directive_config_gen.py  hls_config.py  hls_config.tcl  run_hls.py  run_hls.tcl  run_vitis.sh  tclgen.py  template.tcl  template_override_opt.tcl
hls_override_opt/: callvitis.sh  create_tcl.py  template.tcl
hls_utils/: tcl_script.py
ir/: adpcm  adpcm.md.ll  adpcm.pf.bc  adpcm_instrumented.bc  adpcm_instrumented.ll  data_stats.txt  ir_graph.py  ir_node_features.txt  op_uses.txt  profiler.bc
llvm/: clang_utils.py  exceptions.py  opt_utils.py
llvm/clang_plugins/: CMakeLists.txt
llvm/clang_plugins/src/: ArrayArgPlugin.cpp
llvm/passes/: AddDirectivesMD.cpp  AddDirectivesMetadata.cpp  AssignIdentifiers.cpp  BuildGATModelDFG.cpp  CMakeLists.txt  CleanupExtractedParams.cpp  ClearIntrinsics.cpp  DFG.cpp  DFGForHLS.cpp  ExtractArrayAccessInfo.cpp  ExtractArrayInfo.cpp  ExtractArrayMetadata.cpp  ExtractGlobalArrayUses.cpp  ExtractLoopHierarchy.cpp  ExtractLoopInfo.cpp  ExtractLoopMetadata.cpp  ExtractMD.cpp  ExtractMetadata.cpp  HLSDSEUtils.cpp  HLSDSEUtils.h  HLSIRPrepForGNN.cpp  HLSIRPrepForX86.cpp  Makefile  ModuleDFGBuilder.cpp  PreprocessHLSIRForGNN.cpp  PreprocessHLSIRForX86.cpp  PreprocessVitisIR.cpp  Profiling.cpp  RemoveDummyGlobals.cpp  RemoveIOFCall.cpp  RemoveSpecFunctions.cpp  RenameValues.cpp  SetHLSDirectivesMD.cpp  TransformForCDFGExtraction.cpp  UpdateMD.cpp  V2C.cpp  WriteCFG.cpp
llvm/passes/ahls/: AddDirectivesMetadata.cpp  GetDFG.cpp  GetDFGEdges.cpp  GetDFGNodes.cpp  GetOpAttributes.cpp  GetOpUses.cpp  Profiling.cpp  VariableToConstant.cpp
llvm/passes/preprocessing/: UpdateMD.cpp
metrics/: data_stats.py  resource_savings.py
passes/: BinOpTrace.cpp  ImplementStreamMethods.cpp  PreprocessVitisIR.cpp  RemoveFIFOIntrinsics.cpp  RemoveHintScopeIntrinsics.cpp
preprocessing/: preprocessor.py
scripts/: analyze_design_flow_timing.py  analyze_gnn_area_estimates.py  analyze_hls_area_estimates.py  apply_v2c.py  approx.py  area_estimator_error_analysis.py  area_model_shap.py  compute_area_metric_stats.py  hls_rpt_parser.py  instrument_ir.py  parse_dataset_rpts.py  plot_data_metrics.py  preprocess_benchmarks.sh  preprocess_benchs.sh  preprocess_dataset.py  preprocess_dataset_gat.py  preprocess_dataset_han.py  preprocess_hls_ir.py  (+6 more)
(+54498 files in other folders)
